quick fix to homepage image module on mobile

--- a/web/wp-content/themes/nats-philanthropies-theme/styles/scss/_home-image.scss
+++ b/web/wp-content/themes/nats-philanthropies-theme/styles/scss/_home-image.scss
@@ -88,4 +88,8 @@
   @media screen and ( max-width: 1100px ) {
     max-width: 400px;
   }
+
+  @media screen and ( max-width: 450px ) {
+    max-width: 100%;
+  }
 }
